# useful-tools

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_uninstall.cmake.in
include/: ut_array.h  ut_deque.h  ut_errno.h  ut_hash.h  ut_hash_map.h  ut_hash_set.h  ut_heap.h  ut_iter.h  ut_list.h  ut_memswap.h  ut_pair.h  ut_string.h  ut_tree_map.h  ut_tree_set.h  ut_type.h
src/: ut_hash.c  ut_string.c  ut_type.c
src/collections/: ut_array.c  ut_deque.c  ut_hash_map.c  ut_hash_set.c  ut_heap.c  ut_list.c  ut_tree_map.c  ut_tree_set.c
test/: ut_array_test.c  ut_deque_test.c  ut_hash_map_test.c  ut_hash_set_test.c  ut_heap_test.c  ut_list_test.c  ut_string_test.c  ut_tree_map_test.c  ut_tree_set_test.c
